# hevy

./: .gitignore  CLAUDE.md  HEVY_INTEGRATION.md  PARSER_README.md  PLAN.md  POST_TO_HEVY.md  README_LLM_PARSER.md  convert_pdf_to_markdown.py  hevy_folders.json  pyproject.toml  pytest.ini
Workouts/: PaulSklarXfit365-4-Week-Stay-At-Home-Program.md  PaulSklarXfit365-Monthly-Program-v5.md  PaulSklarXfit365-Monthly-Programming-v71.md  PaulSklarXfit365-V10.md  PaulSklarXfit365-v12_2020-06.md  PaulSklarXfit365-v14.md
llm/: PaulSklarXfit365-4-Week-Stay-At-Home-Program.json  PaulSklarXfit365-Monthly-Program-v5.json  PaulSklarXfit365-Monthly-Programming-v71.json  PaulSklarXfit365-V10.json  PaulSklarXfit365-v12_2020-06.json  PaulSklarXfit365-v14.json
notebooks/: pdfs.ipynb
src/: convert_to_hevy_api.py  create_folders.py  fetch_exercises.py  parse_markdown_to_json.py  parse_pdf_to_json.py
src/hevy/: __init__.py  __main__.py  llm_workout_parser.py  model.py  workout_parser.py
src/hevy/tests/: README.md  __init__.py  conftest.py  sample_response.json  test_integration.py  test_model.py  test_workout_parser.py
