[project]
name = "hevy"
version = "0.1.0"
description = "Hevy - A Python application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hevy = "hevy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hevy"]
