[project]
name = "hevy"
version = "0.1.0"
description = "Hevy - A Python application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pymupdf>=1.23.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.21.0",
    "pydantic>=2.0.0",
    "litellm>=1.80.7",
    "dotenv>=0.9.9",
    "botocore>=1.42.2",
    "backoff>=2.2.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
hevy = "hevy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hevy"]
